--- a/lesson6/task4/src/index.scss
+++ b/lesson6/task4/src/index.scss
@@ -4,7 +4,6 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 32px;
 }
 
 #root {
@@ -14,31 +13,23 @@ body {
   align-items: center;
 }
 
-.picker {
-  &__title {
-    text-align: center;
-    height: 32px;
+.status {
+  border: 2px solid #000;
+  height: 32px;
+  border-radius: 16px;
+  overflow: hidden;
+
+  &__btn {
+      height: 100%;
+      border: none;
+      background-color: #000;
+      color: #fff;
+      cursor: pointer;
+      padding: 0 8px;
   }
 
-  &__button {
-    width: 48px;
-    height: 48px;
-    margin: 16px;
-    border: 2px solid #eee;
-    border-radius: 8px;
-    cursor: pointer;
-    outline: none;
-
-    &_coral {
-      background-color: #ff7f50;
-    }
-
-    &_aqua {
-      background-color: #00ffff;
-    }
-
-    &_bisque {
-      background-color: #ffe4c4;
-    }
+  &__text {
+      padding: 0 8px;
+      line-height: 28px;
   }
 }
