--- a/lesson6/task5/src/index.scss
+++ b/lesson6/task5/src/index.scss
@@ -4,7 +4,6 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 32px;
 }
 
 #root {
@@ -14,31 +13,39 @@ body {
   align-items: center;
 }
 
-.picker {
-  &__title {
-    text-align: center;
-    height: 32px;
+.login {
+  background-color: green;
+}
+
+.logout {
+  background-color: cornflowerblue;
+}
+
+@keyframes spin {
+  from {
+      transform: rotate(0deg); 
   }
-
-  &__button {
-    width: 48px;
-    height: 48px;
-    margin: 16px;
-    border: 2px solid #eee;
-    border-radius: 8px;
-    cursor: pointer;
-    outline: none;
-
-    &_coral {
-      background-color: #ff7f50;
-    }
-
-    &_aqua {
-      background-color: #00ffff;
-    }
-
-    &_bisque {
-      background-color: #ffe4c4;
-    }
+  to {
+      transform: rotate(360deg); 
   }
+}
+
+.spinner {
+  display: inline-block;
+  border: 3px solid #ccc;
+  border-left-color: transparent;
+  animation: spin .5s infinite linear;
+  border-radius: 50%;
+}
+
+.btn {
+  height: 48px;
+  color: #fff;
+  border-radius: 8px;
+  width: 120px;
+  outline: none;
+  border: none;
+  text-transform: uppercase;
+  padding: 8px;
+  cursor: pointer;
 }
